jstests/aggregation/testbugs.js
@@ -17,3 +17,4 @@ load(mydir + 'server3832.js');
 load(mydir + 'server4508.js');
 //load('server4638.js');
 load(mydir + 'server4738.js');
+load(mydir + 'server5012.js');
